--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@ header nav .left a:hover{
 
 }
 
-.btn-primary a{
+/*.btn-primary a{
     color: var(--dark);
     text-decoration: none;
 }
@@ -72,7 +72,7 @@ header nav .left a:hover{
     color: var(--dark);
     text-decoration: none;
 
-}
+}*/
 
 
 
