--- a/css/index.css
+++ b/css/index.css
@@ -297,16 +297,18 @@ section.words .slide{
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 0 30rem;
+    padding: 0 8rem;
     border-style: outset;
-    margin-left: 6rem;
-    margin-right: 6rem;
+    margin-left: 20rem;
+    margin-right: 20rem;
 }
 
 section.words .slide p{
     font-family: 'Lato', 'sans-serif';
     color: var(--ternary);
     margin-bottom: 1rem;
+    margin-left: 1rem;
+    text-align: center;
 }
 
 section.words .slide span{
